--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server --port 8000"
+    "dev": "webpack-dev-server --port 8000",
+    "start": "http-server -p $PORT"
   },
   "dependencies": {
     "css-loader": "^0.28.7",
@@ -11,6 +12,7 @@
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "http-server": "^0.11.1"
   }
 }
